2010-10-08  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/45673
	PR debug/45604
	PR debug/45419
	PR debug/45408
	* tree-pretty-print.c (dump_generic_node): Explicitly dump the
	type of MEM_REFs to INTEGER_CSTs.

2010-10-07  Nathan Froyd  <froydnj@codesourcery.com>

	* config/m68hc11/m68hc11.c (m68hc11_print_operand): Call
	m68hc11_print_operand_address.

2010-10-07  Nathan Froyd  <froydnj@codesourcery.com>

	* builtins.c (rewrite_call_expr): Move code to...
	(rewrite_call_expr_valist): ...here.  Call
	build_call_expr_loc_array.
	(rewrite_call_expr_array): New function.
	(fold_builtin_sprintf_chk_1): New function.
	(fold_builtin_sprintf_chk): Call it.
	(gimple_fold_builtin_sprintf_chk): Likewise.
	(fold_builtin_snprintf_chk_1): New function.
	(fold_builtin_snprintf_chk): Call it.
	(gimple_fold_builtin_snprintf_chk): Likewise.
	(gimple_rewrite_call_expr): Delete.

2010-10-07  Dave Korn  <dave.korn.cygwin@gmail.com>

	* config.host: Update copyright year.

2010-10-07  Dave Korn  <dave.korn.cygwin@gmail.com>

	* config.host (host_lto_plugin_soname): New shell variable.
	* configure.ac (LTOPLUGINSONAME): Add an AC_DEFINE for the above.
	* config.in: Regenerate.
	* configure: Regenerate.
	* gcc.c (main): Use LTOPLUGINSONAME instead of hard-coding name of
	LTO plugin shared library.

2010-10-07  Richard Henderson  <rth@redhat.com>

	* target.h (enum unwind_info_type): Move ...
	* coretypes.h: ... here.

2010-10-07  Nicola Pero  <nicola.pero@meta-innovation.com>

	* doc/objc.texi (Fast enumeration protocol): Mention that
	'unsigned int' can also be used instead of 'unsigned long' in
	countByEnumeratingWithState:objects:count:.

2010-10-07  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (struct access): New field grp_assignment_write.
	(dump_access): Dump grp_assignment_write.
	(build_accesses_from_assign): Set grp_assignment_write.
	(sort_and_splice_var_accesses): Aggregate grp_assignment_write.
	(mark_read_status): Renamed to mark_rw_status, individual values